# rust-blockchain-tutorial

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
blockchain/: Cargo.toml
blockchain/src/: account.rs  block.rs  error.rs  helpers.rs  lib.rs  request.rs  transaction.rs
chain/: Cargo.toml  README.md
chain/.tmp/db/: 000008.sst  000013.sst  000018.sst  IDENTITY  LOG  LOG.old.1675825651724025  LOG.old.1675825663614509  LOG.old.1675825858954302  MANIFEST-000020
chain/src/: account.rs  block.rs  blockchain.rs  chain.rs  error.rs  helpers.rs  keys.rs  logger.rs  main.rs  method.rs  server.rs  state.rs  storage.rs  transaction.rs  world_state.rs
client/: Cargo.toml  README.md
contracts/: README.md  package-lock.json  package.json
contracts-wasm/erc20/: README.md  build.rs  erc20.wit
contracts/contracts/: ERC20.sol
contracts/erc20/: Cargo.toml  README.md  erc20.wit
contracts/erc20/src/: lib.rs
contracts/erc20/wit/: erc20.wit
crypto/: Cargo.toml
crypto/src/: lib.rs
proc_macros/: Cargo.toml  README.md
proc_macros/src/: lib.rs  newtype.rs
runtime/: Cargo.toml  README.md
runtime/src/: contract.rs  erc20.rs  error.rs  lib.rs
types/: Cargo.toml  README.md
types/src/: account.rs  block.rs  bytes.rs  error.rs  helpers.rs  lib.rs  request.rs  transaction.rs
utils/: Cargo.toml  README.md
utils/src/: crypto.rs  error.rs  lib.rs
web3/: Cargo.toml  README.md
web3/src/: account.rs  block.rs  contract.rs  error.rs  helpers.rs  lib.rs  request.rs  transaction.rs
