[package]
name = "chain"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[dependencies]
blake2 = "0.10.4"
dashmap = { version = "5.4.0", features = ["rayon", "serde"] }
ethereum-types = "0.10.0"
futures = "0.3"
hyper = "0.14.10"
jsonrpsee = { version = "0.15.1", features = ["full"] }
rayon = "1.5.3"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1"
thiserror = "1.0"
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"]}
types = { path = "../types" }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
lazy_static = "1.4.0"
