[package]
name = "proc_macros"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
description = "Procedural Macros"
edition = "2021"

[lib]
proc_macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = {version = "1.0.100", features = ["full"]}