[package]
name = "runtime"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
paste = "1.0.12"
thiserror = "1.0.38"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
wasmtime = { version = "6.0.1", features = ["component-model"] }
wit-component = "0.7.3"
wit-bindgen = { version = "0.4.0" }


[dev-dependencies]
test-log = { version = "0.2.11", features = ["trace"] }
types = { path = "../types" }
