[package]
name = "types"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
crypto = { path = "../crypto" }
ethereum-types = "0.10.0"
hex = "0.4"
serde = "1"
serde_json = "1"
serde_with = {version = "1.8.0", features = ["macros"]}
thiserror = "1.0"
