[package]
name = "utils"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[dependencies]
ethereum-types = "0.10.0"
lazy_static = "1.4.0"
rlp = "0.5.2"
secp256k1 = { version = "0.26.0", features = ["recovery", "global-context", "bitcoin-hashes-std", "rand-std", "serde"] }
serde = "1"
sha3 = "0.10.6"
thiserror = "1.0.38"
