[package]
name = "blockchain"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2018"

[dependencies]
async-jsonrpc-client = "0.3.0"
ethereum-types = "0.10.0"
ethabi = "13"
hex = "0.4"
log = "0.4.0"
serde = "1"
serde_json = "1"
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
