[package]
name = "web3"
version = "0.1.0"
authors = ["David DiMaria <info@collectivesessions.com>"]
edition = "2021"

[dependencies]
async-jsonrpc-client = "0.3.0"
ethereum-types = "0.10.0"
ethabi = "13"
hex = "0.4"
jsonrpsee = { version = "0.16.2", features = ["full", "client"] }
log = "0.4.0"
secp256k1 = { version = "0.24.0", features = ["recovery", "global-context"] }
serde = "1"
serde_json = "1"
thiserror = "1.0"
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
